syntax = "proto3";

package oip5.record;

option go_package = "oip5";

message RecordTemplateProto {
    // Human readable name to quickly identify type (non-unique)
    string friendlyName = 1;

    // Description of the purpose behind this new type
    string description = 2;

    // Compiled descriptor including dependencies
    bytes DescriptorSetProto = 4;

    // Populated by oipd with the unique identifier for this type
    fixed64 identifier = 10;

    // List of unique template identifiers recommended for use with this template
    repeated fixed64 recommended = 11;

    // List of unique template identifiers required for use with this template
    repeated fixed64 required = 12;
}
